--- a/Templates/index.html
+++ b/Templates/index.html
@@ -51,7 +51,7 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a class="active" href="/">home</a></li>
-                                            <li><a href="about.html">About</a></li>
+                                            <li><a href="about">About</a></li>
                                              </li>
                                              <li><a href="upcoming_trips">Upcoming Trips</a></li>
                                              </li>
@@ -64,8 +64,8 @@
                                             {%endif%}
                                             <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
+                                                    <li><a href="blog">blog</a></li>
+                                                    <li><a href="blog">single-blog</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="contact.html"></a></li>
