--- a/Templates/about.html
+++ b/Templates/about.html
@@ -99,7 +99,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="/media/pics/tanzin.jpg" alt="Tanzin" style="width:100%">
+      <img src="/media/pics/Tanzin.png" alt="Tanzin" style="width:100%">
       <div class="container">
         <h2>Tanzin Ahmmad</h2>
         <p class="title">Art Director</p>
