--- a/Templates/index.html
+++ b/Templates/index.html
@@ -79,22 +79,22 @@
                              <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 0261-25569</p>
+                                        <p> <i class="fa fa-phone"></i> +8801625763219</p>
                                     </div>
 
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
                                             <li>
-                                                <a href="#"> <i class="fa fa-instagram"></i> </a>
+                                                <a href="https://www.instagram.com/"> <i class="fa fa-instagram"></i> </a>
                                             </li>
                                             <li>
-                                                <a href="#"> <i class="fa fa-linkedin"></i> </a>
+                                                <a href="https://www.linkedin.com/"> <i class="fa fa-linkedin"></i> </a>
                                             </li>
                                             <li>
-                                                <a href="#"> <i class="fa fa-facebook"></i> </a>
+                                                <a href="https://www.facebook.com/"> <i class="fa fa-facebook"></i> </a>
                                             </li>
                                             <li>
-                                                <a href="#"> <i class="fa fa-google-plus"></i> </a>
+                                                <a href="https://www.google.com/"> <i class="fa fa-google-plus"></i> </a>
                                             </li>
                                         </ul>
                                     </div>
@@ -352,7 +352,7 @@
                         <div class="icon">
                             <img src="{% static 'img/svg_icon/3.svg' %}" alt="">
                         </div>
-                        <h3>Travel Guide</h3>
+                        <h3>Tour Guide</h3>
                         <p>A wonderful serenity has taken to the possession of my entire soul.</p>
                     </div>
                 </div>
@@ -378,7 +378,7 @@
                                         </div>
                                         <p>"The gladdest moment in human life is a departure into unknown lands.</p>
                                         <div class="testmonial_author">
-                                            <h3>- Alvero morte</h3>
+                                            <h3>- Tanzin Ahammad</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -393,7 +393,7 @@
                                         </div>
                                         <p>"The gladdest moment in human life is a departure into unknown lands. </p>
                                         <div class="testmonial_author">
-                                            <h3>- Alvaro M.</h3>
+                                            <h3>- Mahedi Hasan</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -408,7 +408,7 @@
                                         </div>
                                         <p>"Travel makes one modest. You see what a tiny place you occupy in the world.</p>
                                         <div class="testmonial_author">
-                                            <h3>- Shrey B.</h3>
+                                            <h3>- Mohammad Nazmus Sakib</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -436,9 +436,9 @@
                                     <img src="{% static 'img/footer_logo.png' %}" alt="">
                                 </a>
                             </div>
-                            <p>Kishan samosa<br> lane New York-1782 <br>
-                                <a href="#">+91 99999 88888</a> <br>
-                                <a href="#">dharmilvaghasia3675@gmail.com</a>
+                            <p>Chittagong University of Engineering and Technology<br> Chattogram, Bangladesh <br>
+                                <a href="#">+8801625763219</a> <br>
+                                <a href="#">u1704003@student.cuet.ac.bd</a>
                             </p>
                             <div class="socail_links">
                                 <ul>
