--- a/Templates/travel_destination.html
+++ b/Templates/travel_destination.html
@@ -276,7 +276,7 @@
                         </div>
                         <div class="info">
                             <div class="date">
-                                <span>Oct 12, 2019</span>
+                                <span>Jan 12, 2023</span>
                             </div>
                             <a href="#">
                                 <h3>Journeys Are Best Measured In
@@ -292,7 +292,7 @@
                         </div>
                         <div class="info">
                             <div class="date">
-                                <span>Oct 12, 2019</span>
+                                <span>Jan 12, 2023</span>
                             </div>
                             <a href="#">
                                 <h3>Journeys Are Best Measured In
@@ -318,9 +318,9 @@
                                     <img src="{% static 'img/footer_logo.png' %}" alt="">
                                 </a>
                             </div>
-                            <p>A-2 Shyamal society,Kishan samosa<br> lane New York-1782 <br>
-                                <a href="#">+91 99999 88888</a> <br>
-                                <a href="#">dharmilvaghasia3675@gmail.com</a>
+                            <p>Chittagong University of Engineering and Technology<br> Chattogram, Bangladesh <br>
+                                <a href="#">+8801625763219</a> <br>
+                                <a href="#">u1704003@student.cuet.ac.bd</a>
                             </p>
                             <div class="socail_links">
                                 <ul>
