--- a/Templates/destination_details.html
+++ b/Templates/destination_details.html
@@ -232,9 +232,9 @@
                                     <img src="{% static 'img/footer_logo.png' %}" alt="">
                                 </a>
                             </div>
-                            <p>Kishan samosa<br> lane New York-1782 <br>
-                                <a href="#">+9178787878</a> <br>
-                                <a href="#">s.b.3@gmail.com</a>
+                            <p>Chittagong University of Engineering and Technology<br> Chattogram, Bangladesh <br>
+                                <a href="#">+8801625763219</a> <br>
+                                <a href="#">u1704003@student.cuet.ac.bd</a>
                             </p>
                             <div class="socail_links">
                                 <ul>
@@ -259,7 +259,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://www.youtube.com/user/javaboynavin">
+                                        <a href="https://www.youtube.com/">
                                             <i class="fa fa-youtube-play"></i>
                                         </a>
                                     </li>
