--- a/Templates/about.html
+++ b/Templates/about.html
@@ -90,7 +90,7 @@ html {
       <div class="container">
         <h2>Mohammad Nazmus Sakib</h2>
         <p class="title">CEO & Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>Some text that describes me.</p>
         <p>u1704004@student.cuet.ac.bd</p>
         <p><button class="button">Contact</button></p>
       </div>
@@ -103,7 +103,7 @@ html {
       <div class="container">
         <h2>Tanzin Ahmmad</h2>
         <p class="title">Art Director</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>Some text that describes me.</p>
         <p>u1704003@student.cuet.ac.bd</p>
         <p><button class="button">Contact</button></p>
       </div>
@@ -116,7 +116,7 @@ html {
       <div class="container">
         <h2>Mahedi Hasan</h2>
         <p class="title">Designer</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>Some text that describes me.</p>
         <p>u1704023@student.cuet.ac.bd</p>
         <p><button class="button">Contact</button></p>
       </div>
