--- a/Templates/about.html
+++ b/Templates/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>About Us</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -77,7 +77,7 @@ html {
 </style>
 <body>
 <div class="about-section">
-  <h1>About Us Page</h1>
+  <h1>About Us</h1>
   <p>Some text about who we are and what we do.</p>
   <p>Resize the browser window to see that this page is responsive by the way.</p>
 </div>
@@ -86,12 +86,12 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/media/pics/sakib.jpg" alt="Sakib" style="width:100%">
+      <img src="/media/pics/sakib.jpg" alt="Sakib" width="100%">
       <div class="container">
         <h2>Mohammad Nazmus Sakib</h2>
         <p class="title">CEO & Founder</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>u1704004@student.cuet.ac.bd</p>
+        <p>Email: u1704004@student.cuet.ac.bd</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
@@ -99,12 +99,12 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="/media/pics/tanzin.jpg" alt="Tanzin" style="width:100%">
+      <img src="/media/pics/ttt.jpg" alt="Tanzin" width="100%">
       <div class="container">
         <h2>Tanzin Ahmmad</h2>
         <p class="title">Art Director</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>u1704003@student.cuet.ac.bd</p>
+        <p>Email: u1704003@student.cuet.ac.bd</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
@@ -112,12 +112,12 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="/media/pics/mahedi.jpg" alt="Mahedi" style="width:100%">
+      <img src="/media/pics/mahedi.jpg" alt="Mahedi" width="100%">
       <div class="container">
         <h2>Mahedi Hasan</h2>
         <p class="title">Designer</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>u1704023@student.cuet.ac.bd</p>
+        <p>Email: u1704023@student.cuet.ac.bd</p>
         <p><button class="button">Contact</button></p>
       </div>
     </div>
