--- a/Templates/confirmetion_page.html
+++ b/Templates/confirmetion_page.html
@@ -35,7 +35,7 @@
 </head>
 <body><center>
 <div class="pipo1">
-    Booking Confirmed..
+    Booking Confirmed! Happy Journey.
 </div>
 <div class="pipo2" >
     Stay Happy ,Stay Connected.
