--- a/Templates/index.html
+++ b/Templates/index.html
@@ -374,7 +374,7 @@
                                 <div class="col-lg-8">
                                     <div class="single_testmonial text-center">
                                         <div class="author_thumb">
-                                            <img src="{% static 'img/testmonial/author6.png' %}" alt="">
+                                            <img src="/static/img/testmonial/tanzin1.png" alt="">
                                         </div>
                                         <p>"The gladdest moment in human life is a departure into unknown lands.</p>
                                         <div class="testmonial_author">
@@ -389,7 +389,7 @@
                                 <div class="col-lg-8">
                                     <div class="single_testmonial text-center">
                                         <div class="author_thumb">
-                                            <img src="{% static 'img/testmonial/author.png' %}" alt="">
+                                            <img src="{% static 'img/testmonial/mehedi1.png' %}" alt="">
                                         </div>
                                         <p>"The gladdest moment in human life is a departure into unknown lands. </p>
                                         <div class="testmonial_author">
@@ -404,7 +404,7 @@
                                 <div class="col-lg-8">
                                     <div class="single_testmonial text-center">
                                         <div class="author_thumb">
-                                            <img src="{% static 'img/testmonial/author.png' %}" alt="">
+                                            <img src="/static/img/testmonial/sakib1.png" alt="">
                                         </div>
                                         <p>"Travel makes one modest. You see what a tiny place you occupy in the world.</p>
                                         <div class="testmonial_author">
