--- a/Templates/index.html
+++ b/Templates/index.html
@@ -376,7 +376,7 @@
                                         <div class="author_thumb">
                                             <img src="/static/img/testmonial/tanzin1.png" alt="">
                                         </div>
-                                        <p>"The gladdest moment in human life is a departure into unknown lands.</p>
+                                        <p>"By departure into unknown lands we can realize the unseen beauty of the world.</p>
                                         <div class="testmonial_author">
                                             <h3>- Tanzin Ahammad</h3>
                                         </div>
@@ -491,7 +491,7 @@
                                 Popular destination
                             </h3>
                             <ul class="links double_links">
-                                <li><a href="#">Indonesia</a></li>
+                                <li><a href="#">Chitta</a></li>
                                 <li><a href="#">America</a></li>
                                 <li><a href="#">India</a></li>
                                 <li><a href="#">Switzerland</a></li>
