--- a/Templates/index.html
+++ b/Templates/index.html
@@ -491,14 +491,14 @@
                                 Popular destination
                             </h3>
                             <ul class="links double_links">
-                                <li><a href="#">Chitta</a></li>
-                                <li><a href="#">America</a></li>
-                                <li><a href="#">India</a></li>
-                                <li><a href="#">Switzerland</a></li>
-                                <li><a href="#">Italy</a></li>
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">Franch</a></li>
-                                <li><a href="#">England</a></li>
+                                <li><a href="#">Chattogram</a></li>
+                                <li><a href="#">Dhaka</a></li>
+                                <li><a href="#">Cumilla</a></li>
+                                <li><a href="#">Sylhet</a></li>
+                                <li><a href="#">Rangpur</a></li>
+                                <li><a href="#">Barishal</a></li>
+                                <li><a href="#">Khulna</a></li>
+                                <li><a href="#">Mymensingh</a></li>
                             </ul>
                         </div>
                     </div>
