--- a/Templates/index.html
+++ b/Templates/index.html
@@ -122,7 +122,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Switzerland</h3>
+                                <h3>Bangladesh</h3>
                                 <p></p>
                                 <a href="destination_details/Switzerland" class="boxed-btn3">Explore Now</a>
                             </div>
