--- a/Templates/index.html
+++ b/Templates/index.html
@@ -202,7 +202,7 @@
                 <div class="col-lg-6">
                     <div class="section_title text-center mb_70">
                         <h3>Popular Destination</h3>
-                        <p>A nwonderful serenity has taken to the possession of my entire soul.</p>
+                        <p>A wonderful serenity has taken to the possession of my entire soul.</p>
                     </div>
                 </div>
             </div>
