--- a/Templates/index.html
+++ b/Templates/index.html
@@ -122,9 +122,10 @@
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Switzerland</h3>
+                                <!-- Switzerland -->
+                                <h3>Khulna</h3>
                                 <p></p>
-                                <a href="destination_details/Switzerland" class="boxed-btn3">Explore Now</a>
+                                <a href="destination_details/Khulna" class="boxed-btn3">Explore Now</a>
                             </div>
                         </div>
                     </div>
@@ -136,9 +137,10 @@
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Australia</h3>
+                                  <!-- Australia -->
+                                <h3>Rajshahi</h3>
                                 <p></p>
-                                <a href="destination_list/Australia" class="boxed-btn3">Explore Now</a>
+                                <a href="destination_list/Rajshahi" class="boxed-btn3">Explore Now</a>
                             </div>
                         </div>
                     </div>
@@ -150,9 +152,10 @@
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Italy</h3>
+                                 <!-- Italy -->
+                                <h3>Chattogram</h3>
                                 <p></p>
-                                <a href="destination_list/Italy" class="boxed-btn3">Explore Now</a>
+                                <a href="destination_list/Chattogram" class="boxed-btn3">Explore Now</a>
                             </div>
                         </div>
                     </div>
