--- a/Templates/index.html
+++ b/Templates/index.html
@@ -283,7 +283,7 @@
                     <div class="single_place">
                         <div class="thumb">
                             <img src="{{dest.img1.url}}" alt="">
-                            <a href='destination_details/{{dest.dest_name}}' class="prise">₹{{dest.price}}</a>
+                            <a href='destination_details/{{dest.dest_name}}' class="prise">{{dest.price}}</a>
                         </div>
                         <div class="place_info">
                             <a href='destination_details/{{dest.dest_name}}'>
