--- a/Templates/index.html
+++ b/Templates/index.html
@@ -57,9 +57,9 @@
                                              </li>
                                             {% if user.is_authenticated %}
                                             <li>Hello, {{user.first_name}}</li>
-                                            <li><a href="logout">logout</a></li>
+                                            <li><a href="logout">logOut</a></li>
                                             {%else%}
-                                            <li><a href="login">Login</a></li>
+                                            <li><a href="login">LogIn</a></li>
                                             <li><a href="register">Register</a></li>
                                             {%endif%}
                                             <li><a href="#">blog <i class="ti-angle-down"></i></a>
