--- a/Templates/blog.html
+++ b/Templates/blog.html
@@ -1,272 +1,174 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<style>
+	@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 
-<head>
-<<<<<<< HEAD
-=======
-   hrllor
->>>>>>> 7b337d4d59e26eae0921459350c42f42581cf0f2
-</head>
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
+body {
+  font-family: "Quicksand", sans-serif;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  background: #7f7fd5;
+  background: linear-gradient(to right, #91eae4, #86a8e7, #7f7fd5);
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1200px;
+  margin-block: 2rem;
+  gap: 2rem;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: clamp(20rem, calc(20rem + 2vw), 22rem);
+  overflow: hidden;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 1em;
+  background: #ECE9E6;
+background: linear-gradient(to right, #FFFFFF, #ECE9E6);
+
+}
+
+
+
+.card__body {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+
+.tag {
+  align-self: flex-start;
+  padding: .25em .75em;
+  border-radius: 1em;
+  font-size: .75rem;
+}
+
+.tag + .tag {
+  margin-left: .5em;
+}
+
+.tag-blue {
+  background: #56CCF2;
+background: linear-gradient(to bottom, #2F80ED, #56CCF2);
+  color: #fafafa;
+}
+
+.tag-brown {
+  background: #D1913C;
+background: linear-gradient(to bottom, #FFD194, #D1913C);
+  color: #fafafa;
+}
+
+.tag-red {
+  background: #cb2d3e;
+background: linear-gradient(to bottom, #ef473a, #cb2d3e);
+  color: #fafafa;
+}
+
+.card__body h4 {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+.card__footer {
+  display: flex;
+  padding: 1rem;
+  margin-top: auto;
+}
+
+.user {
+  display: flex;
+  gap: .5rem;
+}
+
+.user__image {
+  border-radius: 50%;
+}
+
+.user__info > small {
+  color: #666;
+}
+</style>
 <body>
-
-   <!-- HEADER -->
-<header class="site-header" role="banner">
-
-	<div class="navbar-wrapper">
-		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-						<span class="sr-only">Toggle Navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button><!-- .navbar-toggle -->
-					<a class="navbar-brand" href="#">
-						<img src="https://nandoangelo.github.io/template-bootstrap/assets/img/logo.png" alt="Bootstrap to Wordpress" title="Home">
-					</a>
-				</div><!-- .navbar-header -->
-				<div class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="https://codepen.io/nandoangelo/pen/gOjzdvo" title="Home">Home</a></li>
-						<li class="active"><a href="#" title="Blog">Blog</a></li>
-						<li><a href="#" title="Resources">Resources</a></li>
-						<li><a href="#" title="Contact">Contact</a></li>
-					</ul><!-- .nav -->
-				</div><!-- .navbar-collapse -->
-			</div><!-- .container -->
-		</div><!-- .navbar -->
-	</div><!-- .navbar-wrapper -->
-
-</header><!-- HEADER -->
-
-<!-- FEATURE IMAGE -->
-<section class="feature-image feature-image-default-alt" data-type="background" data-speed="2">
-	<h1 class="page-title">Blog</h1>
-</section><!-- FEATURE-IMAGE -->
-
-<!-- BLOG CONTENT -->
-<div class="container">
-	<div class="row" id="primary">
-		<main id="content" class="col-sm-8" role="main">
-
-			<article class="post">
-				<header>
-					<h3><a href="post.html" title="Full Post">Blog Title Here</a></h3>
-					<div class="post-details">
-						<i class="fa fa-user"></i> Nando Angelo
-						<i class="fa fa-clock-o"></i> <time>Agust 7, 2014</time>
-						<i class="fa fa-folder-open"></i> <a href="#">Tutorials</a>, <a href="#">Coding</a>
-						<i class="fa fa-tags"></i> Tagged <a href="#">wordpres</a>, <a href="#">premium</a>, <a href="#">another tag</a>, <a href="#">yada yada</a>
-
-						<div class="post-comments-badge">
-							<a href="#"><i class="fa fa-comments"></i>168</a>
-						</div><!-- .post-comments-badge -->
-					</div><!-- .post-details -->
-				</header><!-- header -->
-				<div class="post-image">
-					<img src="https://nandoangelo.github.io/template-bootstrap/assets/img/hero-bg.jpg" alt="Hero Image">
-				</div><!-- .post-image -->
-				<div class="post-excerpt">
-					<p>
-						Proin suscipit luctus orci placerat fringilla. Donec hendrerit laoreet risus eget adipiscing. Suspendisse in urna ligula, a volutpat mauris. Sed enim mi, bibendum eu pulvinar vel, sodales vitae dui. Pellentesque sed sapien lorem, at lacinia urna. In hac habitasse platea dictumst. Vivamus vel justo in leo laoreet ullamcorper non vitae lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum ullamcorper rutrum <a href="post.html">Continue Heading &raquo;</a>
-					</p>
-				</div><!-- .post-excerpt -->
-			</article><!-- .post -->
-
-			<article class="post">
-				<header>
-					<h3><a href="post.html" title="Full Post">Blog Title Here</a></h3>
-					<div class="post-details">
-						<i class="fa fa-user"></i> Nando Angelo
-						<i class="fa fa-clock-o"></i> <time>Agust 7, 2014</time>
-						<i class="fa fa-folder-open"></i> <a href="#">Tutorials</a>, <a href="#">Coding</a>
-						<i class="fa fa-tags"></i> Tagged <a href="#">wordpres</a>, <a href="#">premium</a>, <a href="#">another tag</a>, <a href="#">yada yada</a>
-
-						<div class="post-comments-badge">
-							<a href="#"><i class="fa fa-comments"></i>168</a>
-						</div><!-- .post-comments-badge -->
-					</div><!-- .post-details -->
-				</header><!-- header -->
-				<div class="post-image">
-					<img src="https://nandoangelo.github.io/template-bootstrap/assets/img/hero-bg.jpg" alt="Hero Image">
-				</div><!-- .post-image -->
-				<div class="post-excerpt">
-					<p>
-						Proin suscipit luctus orci placerat fringilla. Donec hendrerit laoreet risus eget adipiscing. Suspendisse in urna ligula, a volutpat mauris. Sed enim mi, bibendum eu pulvinar vel, sodales vitae dui. Pellentesque sed sapien lorem, at lacinia urna. In hac habitasse platea dictumst. Vivamus vel justo in leo laoreet ullamcorper non vitae lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum ullamcorper rutrum <a href="post.html">Continue Heading &raquo;</a>
-					</p>
-				</div><!-- .post-excerpt -->
-			</article><!-- .post -->
-
-			<article class="post">
-				<header>
-					<h3><a href="post.html" title="Full Post">Blog Title Here</a></h3>
-					<div class="post-details">
-						<i class="fa fa-user"></i> Nando Angelo
-						<i class="fa fa-clock-o"></i> <time>Agust 7, 2014</time>
-						<i class="fa fa-folder-open"></i> <a href="#">Tutorials</a>, <a href="#">Coding</a>
-						<i class="fa fa-tags"></i> Tagged <a href="#">wordpres</a>, <a href="#">premium</a>, <a href="#">another tag</a>, <a href="#">yada yada</a>
-
-						<div class="post-comments-badge">
-							<a href="#"><i class="fa fa-comments"></i>168</a>
-						</div><!-- .post-comments-badge -->
-					</div><!-- .post-details -->
-				</header><!-- header -->
-				<div class="post-image">
-					<img src="https://nandoangelo.github.io/template-bootstrap/assets/img/hero-bg.jpg" alt="Hero Image">
-				</div><!-- .post-image -->
-				<div class="post-excerpt">
-					<p>
-						Proin suscipit luctus orci placerat fringilla. Donec hendrerit laoreet risus eget adipiscing. Suspendisse in urna ligula, a volutpat mauris. Sed enim mi, bibendum eu pulvinar vel, sodales vitae dui. Pellentesque sed sapien lorem, at lacinia urna. In hac habitasse platea dictumst. Vivamus vel justo in leo laoreet ullamcorper non vitae lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum ullamcorper rutrum <a href="post.html">Continue Heading &raquo;</a>
-					</p>
-				</div><!-- .post-excerpt -->
-			</article><!-- .post -->
-
-		</main><!-- #content -->
-
-		<!-- SIDEBAR -->
-		<aside class="col-sm-4">
-			<!-- .widget subscribe-->
-			<div class="widget">
-				<h4>Join our mailing list</h4>
-				<p>
-					Keep up-to-date with the latest news, and we'll <strong>send you something special as a thank you</strong>
-				</p>
-				<button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">
-					Click here to subscribe
-				</button>
-			</div> <!-- /.widget subscribe-->
-
-			<!-- .widget search -->
-			<div class="widget">
-				<form role="form" class="search-form">
-					<label for="sidebar-search" class="sr-only">Search the blog</label>
-					<input type="text" id="sidebar-search" placeholder="Search the blog...">
-				</form>
-			</div> <!-- /.widget search -->
-
-			<!-- .widget about -->
-			<div class="widget">
-				<h4>About the Bootstrap to Wordpress</h4>						
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</div> <!-- /.widget about -->
-
-			<!-- .widget recent posts -->
-			<div class="widget">
-				<h4>Recent Posts</h4>
-				<ul>
-					<li><a href="post.html">Blog Post #1</a></li>
-					<li><a href="post.html">Blog Post #2</a></li>
-					<li><a href="post.html">Blog Post #3</a></li>
-					<li><a href="post.html">Blog Post #4</a></li>
-					<li><a href="post.html">Blog Post #5</a></li>
-				</ul>
-			</div><!-- /.widget recent posts -->
-
-
-			<!-- .widget categories -->
-			<div class="widget">
-				<h4>Categories</h4>
-				<ul>
-					<li><a href="#">Categorie #1</a></li>
-					<li><a href="#">Categorie #2</a></li>
-					<li><a href="#">Categorie #3</a></li>
-					<li><a href="#">Categorie #4</a></li>
-					<li><a href="#">Categorie #5</a></li>
-					<li><a href="#">Categorie #6</a></li>
-				</ul>
-			</div><!-- /.widget categories -->
-		</aside>
-
-	</div><!-- .row #primary -->
-</div><!-- BLOG CONTENT -->
-
-<!-- SIGN UP -->
-<section id="signup" data-type="background" data-speed="4">
 	<div class="container">
-		<div class="row">
-			<div class="col-sm-6 col-sm-offset-3">
-				<h2>Are you ready to take your coding skills to the <strong>next level</strong>?</h2>
-				<p>
-					<a href="#" class="btn btn-lg btn-block btn-success" data-toggle="modal" data-target="#myModal">Yes, sign up</a>
-				</p>
-			</div><!-- .col -->
-		</div><!-- .row -->
-	</div><!-- .container -->
-</section><!-- #signup -->
-
-<!-- FOOTER -->
-<footer>
-	<div class="container">
-		<div class="col-sm-3">
-			<p>
-				<a href="#" title="Home">
-					<img src="https://nandoangelo.github.io/template-bootstrap/assets/img/logo.png" alt="Bootstrap to WordPress">
-				</a>
-			</p>
-		</div><!-- .col -->
-		<div class="col-sm-6">
-			<nav>
-				<ul class="list-unstyled list-inline">
-					<li><a href="">Home</a></li>
-					<li><a href="">Blog</a></li>
-					<li><a href="">Resources</a></li>
-					<li><a href="">Contact</a></li>
-					<li class="signup-link"><a href="">Sign Up</a></li>
-				</ul>
-			</nav>
-		</div><!-- .col -->
-		<div class="col-sm-3">
-			<p class="pull-right">
-				&copy; 2014 Nando Angelo
-			</p>
-		</div><!-- .col -->
-	</div><!-- .container -->
-</footer><!-- footer -->
-
-<!-- MODAL -->
-<div class="modal fade" id="myModal">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-				<h4 class="modal-title" id="myModalLabel"><i class="fa fa-envelope"></i> Subscribe to Our Mailing List</h4>
-			</div><!-- .modal-header -->
-			<div class="modal-body">
-				<p>
-					Simply enter your name and your e-mail! As a thank you for joining us, we're going to give you one of our best-selling courses, <em>for free!</em>
-				</p>
-				<form class="form-inline" role="form">
-
-					<div class="form-group">
-						<label class="sr-only" for="subscribe-name">Your First Name</label>
-						<input class="form-control" type="text" id="subscribe-name" placeholder="Enter your first name"></input>
-					</div><!-- .form-group -->
-
-					<div class="form-group">
-						<label class="sr-only" for="subscribe-email">Your E-mail</label>
-						<input class="form-control" type="email" id="subscribe-email" placeholder="Enter your E-mail"></input>
-					</div><!-- .form-group -->
-
-					<input class="btn btn-danger" type="submit" value="Subscribe!"></input>
-
-				</form>
-				<hr>
-				<p><small>
-					By provinding your e-mail you consent to receiving ocasional promotional e-mails &amp; newsletters. <br>No Spam. Just good stuff. We respect you privacy &amp; you may unsubscribe at any time.
-				</small></p>
-			</div><!-- .modal-body -->
-		</div><!-- .modal-content -->
-	</div><!-- .modal-dialog -->
-</div><!-- .modal -->
+		<div class="card">
+		  <div class="card__header">
+			<img src="/media/pics/ccxs.jpg" alt="card__image" class="card__image" width="600">
+		  </div>
+		  <div class="card__body">
+			<span class="tag tag-blue">cox's bazar</span>
+			<h4>Cox's bazar simply is gorgeous</h4>
+			<p>Cox's Bazar, town, southeastern Bangladesh. It is situated along the Bay of Bengal about 60 miles (100 km) south of Chittagong. The town, constituted a municipality in 1869, was named for Hiram Cox, who supervised the settlement there of Arakanese refugees from conquest by Myanmar (Burma) in 1799</p>
+		  </div>
+		  <div class="card__footer">
+			<div class="user">
+			  <img src="https://i.pravatar.cc/40?img=1" alt="user__image" class="user__image">
+			  <div class="user__info">
+				<h5>Jane Doe</h5>
+				<small>2h ago</small>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="card">
+		  <div class="card__header">
+			<img src="/media/pics/naval.jpg" alt="card__image" class="card__image" width="600">
+		  </div>
+		  <div class="card__body">
+			<span class="tag tag-brown">Food</span>
+			<h4>Naval Seabeach</h4>
+			<p>Excellent. I found it really excellent but local shops play music very laud. It is annoying sometimes. Best place for having small afternoon snacks at there.</p>
+		  </div>
+		  <div class="card__footer">
+			<div class="user">
+			  <img src="https://i.pravatar.cc/40?img=2" alt="user__image" class="user__image">
+			  <div class="user__info">
+				<h5>Jony Doe</h5>
+				<small>Yesterday</small>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="card">
+		  <div class="card__header">
+			<img src="/media/pics/resort.jpg" alt="card__image" class="card__image" width="600">
+		  </div>
+		  <div class="card__body">
+			<span class="tag tag-red">Resort</span>
+			<h4>Race to your heart content</h4>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+		  </div>
+		  <div class="card__footer">
+			<div class="user">
+			  <img src="https://i.pravatar.cc/40?img=3" alt="user__image" class="user__image">
+			  <div class="user__info">
+				<h5>John Doe</h5>
+				<small>2d ago</small>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </div>
 
 </body>
 </html>
